--- a/YamYamEngine/YamYamEngine_Windows/YamYamEngine_Windows.vcxproj
+++ b/YamYamEngine/YamYamEngine_Windows/YamYamEngine_Windows.vcxproj
@@ -149,6 +149,8 @@
   <ItemGroup>
     <ClCompile Include="yaPlayerScript.cpp" />
     <ClCompile Include="yaPlayScene.cpp" />
+    <ClCompile Include="yaPortal.cpp" />
+    <ClCompile Include="yaPortal.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
