--- a/YamYamEngine/YamYamEngine_Windows/YamYamEngine_Windows.vcxproj
+++ b/YamYamEngine/YamYamEngine_Windows/YamYamEngine_Windows.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="yaPlayer.h" />
     <ClInclude Include="yaPlayerScript.h" />
     <ClInclude Include="yaPlayScene.h" />
+    <ClInclude Include="yaPortal.hpp" />
     <ClInclude Include="yaTurret.h" />
     <ClInclude Include="yaBulletScript.h" />
     <ClInclude Include="yaTurretScript.h" />
@@ -162,6 +163,7 @@
     <ClCompile Include="yaPlayer.cpp" />
     <ClCompile Include="yaPlayerScript.cpp" />
     <ClCompile Include="yaPlayScene.cpp" />
+    <ClCompile Include="yaPortal.cpp" />
     <ClCompile Include="yaTurret.cpp" />
     <ClCompile Include="yaBulletScript.cpp" />
     <ClCompile Include="yaTurretScript.cpp" />
