버튼과 그에 연결된 오브젝트 추가 (#33)
* 들어 올릴 수 있는 박스 추가

* 사소한 수정

* UTF-8 수정

* 리뷰를 참고하여 수정

* 버튼과 그에 연결된 오브젝트 추가

* 박스 스크립트 제거

--- a/YamYamEngine/YamYamEngine_Windows/YamYamEngine_Windows.vcxproj
+++ b/YamYamEngine/YamYamEngine_Windows/YamYamEngine_Windows.vcxproj
@@ -143,7 +143,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="IJ_Box.h" />
-    <ClInclude Include="IJ_BoxScript.h" />
+    <ClInclude Include="IJ_Button.h" />
+    <ClInclude Include="IJ_ButtonConnectedDoor.h" />
+    <ClInclude Include="IJ_ButtonConnectedObject.h" />
     <ClInclude Include="IJ_PlayerAim_Temp.h" />
     <ClInclude Include="yaBullet.h" />
     <ClInclude Include="yaLoadScene.h" />
@@ -157,7 +159,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="IJ_Box.cpp" />
-    <ClCompile Include="IJ_BoxScript.cpp" />
+    <ClCompile Include="IJ_Button.cpp" />
+    <ClCompile Include="IJ_ButtonConnectedDoor.cpp" />
+    <ClCompile Include="IJ_ButtonConnectedObject.cpp" />
     <ClCompile Include="IJ_PlayerAim_Temp.cpp" />
     <ClCompile Include="yaBullet.cpp" />
     <ClCompile Include="yaPlayer.cpp" />
