--- a/YamYamEngine/YamYamEngine_Windows/YamYamEngine_Windows.vcxproj.filters
+++ b/YamYamEngine/YamYamEngine_Windows/YamYamEngine_Windows.vcxproj.filters
@@ -33,9 +33,6 @@
     <ClInclude Include="IJ_Box.h">
       <Filter>GameObjects</Filter>
     </ClInclude>
-    <ClInclude Include="IJ_BoxScript.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
     <ClInclude Include="IJ_PlayerAim_Temp.h">
       <Filter>Player</Filter>
     </ClInclude>
@@ -51,6 +48,16 @@
     <ClInclude Include="yaTurretScript.h">
       <Filter>Scripts</Filter>
     </ClInclude>
+    <ClInclude Include="yaPortal.hpp" />
+    <ClInclude Include="IJ_Button.h">
+      <Filter>GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="IJ_ButtonConnectedObject.h">
+      <Filter>GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="IJ_ButtonConnectedDoor.h">
+      <Filter>GameObjects</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="yaPlayScene.cpp">
@@ -64,9 +71,6 @@
     </ClCompile>
     <ClCompile Include="IJ_Box.cpp">
       <Filter>GameObjects</Filter>
-    </ClCompile>
-    <ClCompile Include="IJ_BoxScript.cpp">
-      <Filter>Scripts</Filter>
     </ClCompile>
     <ClCompile Include="IJ_PlayerAim_Temp.cpp">
       <Filter>Player</Filter>
@@ -82,6 +86,16 @@
     </ClCompile>
     <ClCompile Include="yaTurretScript.cpp">
       <Filter>Scripts</Filter>
+    </ClCompile>
+    <ClCompile Include="yaPortal.cpp" />
+    <ClCompile Include="IJ_Button.cpp">
+      <Filter>GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="IJ_ButtonConnectedObject.cpp">
+      <Filter>GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="IJ_ButtonConnectedDoor.cpp">
+      <Filter>GameObjects</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
