--- a/YamYamEngine/YamYamEngine_SOURCE_static/YamYamEngine_SOURCE_static.vcxproj.filters
+++ b/YamYamEngine/YamYamEngine_SOURCE_static/YamYamEngine_SOURCE_static.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
@@ -167,6 +167,9 @@
     <ClCompile Include="yaTexture.cpp">
       <Filter>Engine\Resource\Texture</Filter>
     </ClCompile>
+    <ClCompile Include="yaTile.cpp">
+      <Filter>Engine\Scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="yaRenderer.h">
@@ -279,6 +282,9 @@
     </ClInclude>
     <ClInclude Include="yaCircleMesh.hpp">
       <Filter>Engine\Resource\Mesh</Filter>
+    </ClInclude>
+    <ClInclude Include="yaTile.h">
+      <Filter>Engine\Scene</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
