플레이어 미러링
미러링 에러 수정

(뒷면 렌더링이 되지 않음, 회전이 Translation 이후에 들어가서 로컬 회전이 적용되지 않음)

--- a/YamYamEngine/YamYamEngine_Windows/YamYamEngine_Windows.vcxproj
+++ b/YamYamEngine/YamYamEngine_Windows/YamYamEngine_Windows.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="yaLoadScene.h" />
     <ClInclude Include="yaPlayer.h" />
     <ClInclude Include="yaPlayerScript.h" />
+    <ClInclude Include="yaPlayerShadow.h" />
     <ClInclude Include="yaPlayScene.h" />
     <ClInclude Include="yaPortal.hpp" />
     <ClInclude Include="yaTurret.h" />
@@ -167,6 +168,7 @@
     <ClCompile Include="yaBullet.cpp" />
     <ClCompile Include="yaPlayer.cpp" />
     <ClCompile Include="yaPlayerScript.cpp" />
+    <ClCompile Include="yaPlayerShadow.cpp" />
     <ClCompile Include="yaPlayScene.cpp" />
     <ClCompile Include="yaPortal.cpp" />
     <ClCompile Include="yaTurret.cpp" />
