--- a/YamYamEngine/YamYamEngine_SOURCE_static/YamYamEngine_SOURCE_static.vcxproj.filters
+++ b/YamYamEngine/YamYamEngine_SOURCE_static/YamYamEngine_SOURCE_static.vcxproj.filters
@@ -271,6 +271,12 @@
     <ClInclude Include="yaSquareMesh.hpp">
       <Filter>Engine\Resource\Mesh</Filter>
     </ClInclude>
+    <ClInclude Include="yaLightingMesh.hpp">
+      <Filter>Engine\Resource\Mesh</Filter>
+    </ClInclude>
+    <ClInclude Include="yaShadowMesh.hpp">
+      <Filter>Engine\Resource\Mesh</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
